--- a/src/app/user-layout/components/product/product.component.html
+++ b/src/app/user-layout/components/product/product.component.html
@@ -4,15 +4,17 @@
     <div
       class="mt-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
       <div class="group relative" *ngFor="let product of products$ | async; index as i">
-        <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-          <img src="{{product.images}}" alt="Front of men&#039;s Basic Tee in black." class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+        <div
+          class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
+          <img src="{{product.images?.[0]}}" alt="Front of men&#039;s Basic Tee in black."
+               class="h-full w-full object-cover object-center lg:h-full lg:w-full">
         </div>
         <div class="mt-4 flex justify-between">
           <div>
             <h3 class="text-sm text-gray-700">
-              <a class="cursor-pointer" (click)="openModal(product)" >
+              <a class="cursor-pointer" (click)="openModal(product)">
                 <span aria-hidden="true" class="absolute inset-0"></span>
-                {{product.name}}
+                {{ product.name }}
               </a>
             </h3>
             <p class="mt-1 text-sm text-gray-500">
@@ -23,7 +25,8 @@
         </div>
       </div>
 
-      <app-product-quick-view *ngIf="selectedProduct" [product]="selectedProduct" (closeModal)="onCloseModal()"></app-product-quick-view>
+      <app-product-quick-view *ngIf="selectedProduct" [product]="selectedProduct"
+                              (closeModal)="onCloseModal()"></app-product-quick-view>
     </div>
   </div>
 </div>
